# Onyx-Engine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  License  ReadMe.md  index.html  navtreedata.js  navtreeindex0.js
CMake/: CheckGitHash.cmake
Docs/.obsidian/: workspace.json
Docs/Pages/: header.html
Docs/Pages/Manual/: CVars.md  Index.md  Logging.md  Maths.md  Memory.md  RNG.md  Timing.md
Onyx/: CMakeLists.txt
Onyx/Engine/: CMakeLists.txt
Onyx/Engine/include/: Onyx.h
Onyx/Engine/include/Onyx/: Version.h
Onyx/Engine/include/Onyx/Core/: CVar.h  Defaults.h  Logger.h  Random.h  Timer.h  Types.h  Utility.h  Version.h
Onyx/Engine/include/Onyx/Graphics/: Window.h
Onyx/Engine/include/Onyx/Maths/: Maths.h  Matrix.h  Quaternion.h  Utils.h  Vector2.h  Vector3.h  Vector4.h
Onyx/Engine/include/Onyx/Memory/: Memory.h  PoolAllocator.h  StackAllocator.h
Onyx/Engine/include/Onyx/Platform/: Platform.cpp  Platform.h
Onyx/Engine/src/: Onyx.cpp  Version.cpp  Version.cpp.in
Onyx/Engine/src/Core/: CVar.cpp  Logger.cpp  Random.cpp  Timer.cpp  Utility.cpp  Version.cpp  Version.cpp.in
Onyx/Engine/src/Graphics/: Window.cpp
Onyx/Engine/src/Maths/: Quaternion.cpp
Onyx/Engine/src/Memory/: PoolAllocator.cpp  StackAllocator.cpp
Onyx/Engine/src/Platform/Linux/: Onyx_Linux.cpp
Onyx/Engine/src/Platform/Windows/: Onyx_Win32.cpp
Testbed/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  maths.cpp
search/: all_0.js  pages_0.js
