project("Onyx-Engine")
message(STATUS "Building Onyx Engine v${ONYX_VERSION_MAJOR}.${ONYX_VERSION_MINOR}.${ONYX_VERSION_ISSUE} [${GIT_HASH}]")
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/Version.cpp.in" "${CMAKE_CURRENT_SOURCE_DIR}/src/Version.cpp" @ONLY)

add_library(${PROJECT_NAME} STATIC "src/Onyx.cpp" "src/Version.cpp")
target_include_directories(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")

set(ONYX_ENGINE_COMPILE_DEFINITIONS )

if(ONYX_PLATFORM_LINUX)
    set(ONYX_ENGINE_COMPILE_DEFINITIONS ${ONYX_ENGINE_COMPILE_DEFINITIONS} ONYX_PLATFORM_LINUX=1)
elseif(ONYX_PLATFORM_WINDOWS)
    set(ONYX_ENGINE_COMPILE_DEFINITIONS ${ONYX_ENGINE_COMPILE_DEFINITIONS} ONYX_PLATFORM_WINDOWS=1)
endif()

target_compile_definitions(${PROJECT_NAME} PUBLIC ${ONYX_ENGINE_COMPILE_DEFINITIONS})
